// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tag default 1`] = `
<div>
  <span
    class="p-tag p-component"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span />
  </span>
</div>
`;

exports[`Tag icon 1`] = `
<div>
  <span
    class="p-tag p-component"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-icon pi pi-check"
      data-pc-section="icon"
    />
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span />
  </span>
</div>
`;

exports[`Tag rounded 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-rounded"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span />
  </span>
</div>
`;

exports[`Tag sevrity danger 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-danger"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span />
  </span>
</div>
`;

exports[`Tag sevrity info 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-info"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span />
  </span>
</div>
`;

exports[`Tag sevrity success 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-success"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span />
  </span>
</div>
`;

exports[`Tag sevrity warning 1`] = `
<div>
  <span
    class="p-tag p-component p-tag-warning"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span />
  </span>
</div>
`;

exports[`Tag templating 1`] = `
<div>
  <span
    class="p-tag p-component"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    />
    <span>
      <div>
        hello
      </div>
    </span>
  </span>
</div>
`;

exports[`Tag value 1`] = `
<div>
  <span
    class="p-tag p-component"
    data-pc-name="tag"
    data-pc-section="root"
  >
    <span
      class="p-tag-value"
      data-pc-section="value"
    >
      jest
    </span>
    <span />
  </span>
</div>
`;
